Bug 1256162 -  use last drag target for dragexit event when comparing to a remote browser. r=smaug, a=ritu